@@ -6,6 +6,10 @@ Changes since 2.4.41:
 Lib/
 * added new SlapdObject methods _ln_schema_files() and
   _create_sub_dirs()
+* removed pseudo test script from module ldap.cidict
+
+Tests/
+* added sub-module for testing class ldap.cidict.cidict
 
 ----------------------------------------------------------------
 Released 2.4.41 2017-07-12
@@ -1469,4 +1473,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.454 2017/08/03 17:26:59 stroeder Exp $
+$Id: CHANGES,v 1.455 2017/08/15 16:14:04 stroeder Exp $
